Fixed the width of page (does not show a white border), refactor code from all classes, create a breadcrumb (includes proper hyperlinks), create a new page when click to see more (goes to category page,) hyperlink movies covers to go to single movie class

--- a/NavigationBar.css
+++ b/NavigationBar.css
@@ -7,7 +7,7 @@ height: 60px;
 width: 230px;
 left: 600px;
 right: 0px;
-bottom: 150px;
+bottom: 100px;
 
 
 font-family: Roboto;
@@ -21,8 +21,8 @@ text-align: center;
 padding: 5px;
 
 
-color: #000000;
-background-color: #ffffff;
+color: black;
+background-color: white;
 
 }
 
@@ -38,7 +38,7 @@ top: 500px;
 
 /* Automation Films - Main Title */
 .mainTitle {
-  top: 10%;
+  bottom: 25%;
   width: 100%;
   align: center;
   
@@ -56,6 +56,8 @@ top: 500px;
 
 /* Navigation Background Bar */
 .NavigationBar {
+  margin: 0;
+  padding: 0;
   background-color: #000000;
   width: 100%;
   height: 100%;
@@ -67,7 +69,7 @@ top: 500px;
   float: left;
   color: white;
   text-align: left;
-  padding: 0.5%;
+  padding: 0.6%;
   text-decoration: none;
   font-size: 20px;
 }
@@ -88,7 +90,7 @@ top: 500px;
 .NavigationBar input[type=search]{
   float: c;
   text-align: center;
-  padding: 8px;
+  padding: 5px;
   width: 50%;
   border: ridge;
   border-color: white;
